--- a/index.html
+++ b/index.html
@@ -41,18 +41,27 @@
                 información que ya no es relevante.
             </p>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/TC8bT7zTdoE?si=w78af7s3JKJCrqou"
-                    title="YouTube video player" frameborder="0"
+                <iframe width="560" height="315" controls autoplay muted loop
+                    src="https://www.youtube.com/embed/TC8bT7zTdoE?si=w78af7s3JKJCrqou" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
             </div>
             <div>
-                <video width="560" height="315" controls>
+                <video width="560" height="315" controls autoplay muted loop>
                     <source src="image/video1.MOV" type="video/mp4">
                     <track src="subtitulo.vtt" kind="subtitles" srclang="es" label="Español">
                     Tu navegador no soporta la etiqueta de video.
+
+                </video>
             </div>
+        </section>
+        <section>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13133.300618472167!2d-58.3602822!3d-34.62122255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352a7fbe0047%3A0x7a6c8ca7b32a9a61!2sVenezuela%20172%2C%20C1095%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1744670930518!5m2!1ses!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <section>
             <h2>Formulario de datos</h2>
